# urlshortener

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  env.example
.github/workflows/: ci.yaml  deploy.yaml
http/: create.http  get.http
src/: config.rs  consumer.rs  db.rs  entity.rs  main.rs  producer.rs
