[package]
name = "urlshortener"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
base-62 = "0.1.1"
dotenv = "0.15.0"
hashers = "1.0.1"
http = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "json",
    "fmt",
] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
ydb = "0.9.5"
ydb-grpc = "0.1.0"
