[package]
name = "urlshortener"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
base-62 = "0.1.1"
dotenv = "0.15.0"
hashers = "1.0.1"
http = "1.3.1"
reqwest = { version = "0.12.19", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "json",
    "fmt",
] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
ydb = "0.9.11"
ydb-grpc = "0.1.0"
headers = "0.4.1"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
axum-client-ip = "1.1.3"
serde_json = "1.0.142"
chrono = "0.4.41"
ua-parser = "0.2.1"
uaparser = "0.6.4"
serde_yaml = "0.9.34"

[patch.crates-io]
ydb = { path = "../ydb-rs-sdk/ydb" }
ydb-grpc = { path = "../ydb-rs-sdk/ydb-grpc" }
